[tool.poetry]
name = "myhousingcustom"
version = "0.1.0"
description = ""
authors = ["swu376 <swu376@wisc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
bs4 = "^0.0.1"
slack-sdk = "^3.21.3"
pydantic = "^1.10.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
