[tool.poetry]
name = "myhousingcustom"
version = "0.1.0"
description = ""
authors = ["charles <yqu39@wisc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.9.1"
dotenv = "^0.0.5"
webdriver-manager = "^3.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
